# smashed-pumpkin

./: .gitignore  AGENTS.md  LICENSE  README.md  features.md  meson.build  stats
.github/workflows/: desktop-builds.yml  flatpak.yml  publish-homebrew.yml  winget-update.yml
build-aux/flatpak/: dev.rotstein.SmashedPumpkin.json
build-aux/homebrew/: generate-cask.sh
build-aux/windows/: Generate-LocalMsiWxs.ps1  stage-bundle.sh
data/: dev.rotstein.SmashedPumpkin.desktop.in  dev.rotstein.SmashedPumpkin.metainfo.xml.in  meson.build
docs/: homebrew.md  platform-support.md  release-pipeline.md  winget.md
resources/: smashed-pumpkin.cmb  smashed-pumpkin.gresource.xml.in  style.css
resources/ui/: window-windows.ui  window.ui
src/: app-config.c  app-config.h  app.c  app.h  download.c  download.h  main.c  meson.build  server-store.c  server-store.h  server.c  server.h  tray-win.c  tray.c  window-console.c  window-console.h  window-internal.h  window-lifecycle.c  window-lifecycle.h  window-networks.c  window-networks.h  window-parse.c  window-parse.h  window-player-data.c  window-player-data.h  window-players.c  window-players.h  window-protocol.c  window-protocol.h  window.c  window.h  windows-resource.rc.in
